<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="首页" />
    
    <item
        android:id="@+id/nav_habit"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="习惯" />
    
    <item
        android:id="@+id/nav_rule"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="规则" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="我的" />
</menu>

